# kaon-lang

./: .gitignore  Cargo.toml  LICENSE  README.md  history.txt
examples/: Cargo.toml  README.md  block.kaon  class.kaon  fun.kaon  (+12 more)
examples/game/: Cargo.toml  README.md
examples/game/scripts/: hello.kaon
examples/game/src/: kaon_bindings.rs  main.rs
kaon/: Cargo.toml
kaon/src/: lib.rs
kaon/src/common/: args.rs  bytecode.rs  class.rs  disassembler.rs  file.rs  hash.rs  immutable_string.rs  loader.rs  map.rs  mod.rs  module.rs  opcode.rs  source.rs  span.rs  state.rs  string.rs  value.rs
kaon/src/compiler/: ast.rs  codegen.rs  lexer.rs  mod.rs  parser.rs  pass.rs  query.rs  resolve.rs  token.rs  typ.rs  typecheck.rs
kaon/src/core/: core.kaon  ffi.rs  float.rs  io.rs  list.rs  map.rs  math.rs  mod.rs  os.rs  string.rs  tuple.rs
kaon/src/error/: mod.rs  renderer.rs  syntax.rs
kaon/src/runtime/: mod.rs  module.rs  run.rs  stack.rs  stdio.rs  trace.rs  vm.rs
kaon/tests/: test_api.rs  test_compiler.rs  test_error.rs  test_lexer.rs  test_parser.rs  test_vm.rs
tests/: Cargo.toml  test_compiler.rs  test_error.rs  test_ffi.rs  test_lexer.rs  test_parser.rs  test_runner.rs  test_stdout.rs  test_vm.rs
tests/benchmarks/: fib.kaon  fib.py  string_equals.kaon  string_equals.py
tests/kaon/: binary_expr.kaon  block.kaon  class.kaon  fun.kaon  globals.kaon  hello.kaon  literal.kaon  locals.kaon  loop.kaon  unary_op.kaon
tests/kaon/block/: block.kaon
tests/kaon/class/: empty.kaon  local_reference_self.kaon  reference_self.kaon
tests/kaon/closure/: assign_to_closure.kaon
tests/kaon/constructor/: ctor_with_self.kaon  default_constructor.kaon  mutliple_constructor.kaon  named_constructor.kaon
tests/kaon/field/: method.kaon  set_field.kaon
tests/kaon/if/: else.kaon  if.kaon  if_else_chain.kaon
tests/kaon/literal/: boolean.kaon  nil.kaon  number.kaon  string.kaon
tests/kaon/loop/: loop.kaon  while.kaon
tests/kaon/operator/: binary.kaon  unary.kaon
tests/kaon/self/: return_self.kaon
tests/kaon/variable/: global.kaon  locals.kaon
tests/src/: main.rs  test_runner.rs
(+72 files in other folders)
