[package]
name = "kaon-lang"
version = "0.1.4"
authors = ["PlutonianHacker <edmondjames16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.0.0"
clap = "3.1.2"
termcolor = "1.1.2"
fnv = "1.0.7"

[dev-dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"