[package]
name = "kaon"
version = "0.1.4"
authors = ["PlutonianHacker <edmondjames16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1.2"
fnv = "1.0.7"
smallvec = { version = "1.8.0", features = ["const_new"] }

kaon_macros = { path = "../kaon-macros" }

[dev-dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"
criterion = "0.3"
