[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kaon = { path = "../kaon" }
regex = "1.5.4"
lazy_static = "1.4.0"

[[test]]
name = "test_runner"
path = "./src/test_runner.rs"